--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
+          <li class="nav-item align-self-center">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item align-self-center">
             <a class="nav-link" href="#">PPCM Program</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item align-self-center">
             <a class="nav-link" href="#">FAQ</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item align-self-center">
             <a class="nav-link" href="#">Log In</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item align-self-center">
             <a class="btn btn-primary shadow-none" href="#">Contact Us</a>
           </li>
         </ul>
@@ -54,6 +54,10 @@
     </div>
   </nav>
 
+  <!-- Hero -->
+  <section>
+    
+  </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
